--- a/TestingApp/src/app/app.component.html
+++ b/TestingApp/src/app/app.component.html
@@ -2,13 +2,76 @@
 
 <header>
   <h1>All about Angular 4</h1>
+  <h4> {{"Title :" +  jobtitle}}</h4>
+  <h4> {{"Contact :" +  getContact()}}</h4>
 </header>
 
 <section>
     <h3>Angular 5 is here already! what shell we do ?</h3>
+    <ul>
+      <li>{{job?.title}}1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+    </ul>
 </section>
 
+<section>
+  <h3>Property Binding</h3>
+  <br>
+  <button class="btn btn-primary btn-sm" disabled>Disabled</button>
+  <button class="btn btn-primary btn-sm" [disabled]  = "false"> Disabled 2</button>
+  <button class="btn btn-primary btn-sm" [disabled]  = "isDisabled"> Disabled 3</button>
+  <button class="btn btn-primary btn-sm" bind-disabled  = "isDisabled"> Disabled 4</button>
+</section>
+
+<section>
+    <h3>Event Handling</h3>
+    <div>
+      <button class="btn btn-warning btn-sm" id="mybtn1" (click) = "onCLickmybtn()">Click to see </button>
+      <p>{{"Position:-" + possition}}</p>
+    </div>
+    
+    <div>
+      <button class="btn btn-warning btn-sm" id="mybtn2" (click) = "onCLickmybtn2($event)">Click to pass events </button>
+      <p>{{"Address " + Address }}</p>
+    </div>
+
+    <div>
+      <button class="btn btn-danger btn-sm" id="mybtn3" on-click="Area = $event.target.textContent" >Colombo </button>
+      <button class="btn btn-danger btn-sm" id="mybtn3" on-click="Area = $event.target.textContent" >Negombo </button>
+      <button class="btn btn-danger btn-sm" id="mybtn3" on-click="Area = $event.target.textContent" >Kandy </button>
+      <p>{{"Current City " + Area }}</p>
+    </div>
+</section>
+
+<section>
+  <h3 [class]="specialh3">Classes , Attributes , Styles</h3>
+
+  <div>
+    <p>We tag this part as the most <span [class]="spcecialcase">important </span>  part of the doc.
+      it is using angular class binding 
+      And others are not that important. so we mark them with non decorated</p>
+  </div>
+
+  <div [ngClass] = "alertstyles">
+      <p>This area is styled using multiple style embeded!</p>
+  </div>
+
+  <div [ngClass] = "singleLine">
+    <p>This area is styled using multiple style embeded!</p>
+  </div>
+
+  <div [class.alertstyles]="ischange">
+    <p >This area is styled using multiple style embeded!</p>
+    <button (click) = "buttonCLickColorCHange(1)">Make this red</button>
+    <button (click) = "buttonCLickColorCHange(2)">Remove red</button>
+  </div>
+
+</section>
 
 <footer>
   Copyright @ xxx Corparations
 </footer>
+
