--- a/TestingApp/src/styles.css
+++ b/TestingApp/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    color: #263238;
+    margin: 0;
+    padding: 0;
+}   
+section{
+    background-color: rgb(232, 237, 240);
+    color: #263238;
+    border-bottom: 4px solid #E64A19;
+    padding: 5px;
+    margin-bottom: 10px;  
+}
+
+h1, h2,h3,h4{
+    color: #E64A19;
+}
+
+div{
+    padding: 5px;
+
+}
