--- a/TestingApp/src/app/app.component.html
+++ b/TestingApp/src/app/app.component.html
@@ -6,6 +6,27 @@
   <h4> {{"Contact :" +  getContact()}}</h4>
 </header>
 
+<section>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">WebSiteName</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a routerLink="/forms">Forms Driven</a></li>
+        <li><a href="#">Page 2</a></li>
+        <li><a href="#">Page 3</a></li>
+      </ul>
+    </div>
+  </nav>
+</section>
+
+<section>
+  <router-outlet></router-outlet>
+</section>
+
+<section>
 <div class="col-md-6 col-md-offset-3">
   <h1>Home</h1>
   <p>{{bodyText}}</p>
@@ -36,7 +57,7 @@
   <div class="modal-background"></div>
 </modal>
 
-
+</section>
 
 
 
